--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@firebase/firestore": "^4.6.5",
     "firebase": "^10.12.5",
     "next": "14.2.5",
+    "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0"
