Added user and JWT setting in cookie

--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   },
   "dependencies": {
     "@firebase/firestore": "^4.6.5",
+    "bcrypt": "^5.1.1",
     "firebase": "^10.12.5",
+    "jsonwebtoken": "^9.0.2",
     "next": "14.2.5",
     "next-auth": "^4.24.7",
+    "nodemailer": "^6.9.14",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0"
