--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-icons": "^5.3.0"
   },
   "devDependencies": {
+    "@types/react": "18.3.11",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "postcss": "^8",
